--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -76,7 +76,7 @@
  
 </nav>
 <section class="barra-sucursal contenedor ">
-  <h2  class="barra-covid no-margin">Valle Real</h2>
+  <h2  class="barra-covid no-margin">Ciudadela</h2>
 </section>
 
 <!--Aqui inicia el Woddslaider-->
