--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
    <article class="barra-imagenes--segunda">
     <div class="sucursales">
       <h2 >Ciudadela</h2>
-      <a class="boton__promociones--segunda" href="index.html">Galería de fotos</a>
+      <a class="boton__promociones--segunda" href="galeriaIlusionBowl.html">Galería de fotos</a>
     </div>
     </article>
     </div>
