--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -100,7 +100,7 @@
 	
     <div class="ws_bullets">
     
-       <a href="#" title="img01"><img src=miniaturas/DSCF6153.JPG" alt="img01"/></a>
+       <a href="#" title="img01"><img src="miniaturas/DSCF6153.JPG" alt="img01"/></a>
         <a href="#" title="img02"><img src="miniaturas/DSCF6171.JPG" alt="img02"/></a>
         <a href="#" title="img03"><img src="miniaturas/DSCF6174.JPG" alt="img04"/></a>
         <a href="#" title="img04"><img src="miniaturas/dscf6176.jpg" alt="img05"/></a>
