--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -80,6 +80,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
+<div class="contenedor">
 <form id="form1" runat="server">
     <div>
    
@@ -88,13 +89,13 @@
 	<div id="wowslider-container1">
 	<div class="ws_images">
 		<ul>
-	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 500px; height: 370px" /></li>
-        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:500px; height:370px;" /></li>
-        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:500px; height:370px;" /></li>
+	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 800px; height: 370px" /></li>
+        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:800px; height:370px;" /></li>
         </ul>
 	</div>
 	
@@ -110,12 +111,12 @@
 	</div>
     </div>
 	<script type="text/javascript" src="scripts/wowslider.js"></script>
-	<script type="text/javascript" src="scripts/script.js"></script>
+<!--	<script type="text/javascript" src="scripts/script.js"></script>-->
 	
 	
 
 </form>
-
+</div>
 
 
 
