--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -88,13 +88,13 @@
 	<div id="wowslider-container1">
 	<div class="ws_images">
 		<ul>
-	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 500px; height: 370px" /></li>
-        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:500px; height:370px;" /></li>
-        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:500px; height:370px;" /></li>
-        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:500px; height:370px;" /></li>
+	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 800px; height: 370px" /></li>
+        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:800px; height:370px;" /></li>
         </ul>
 	</div>
 	
@@ -110,7 +110,7 @@
 	</div>
     </div>
 	<script type="text/javascript" src="scripts/wowslider.js"></script>
-	<script type="text/javascript" src="scripts/script.js"></script>
+	<!--	<script type="text/javascript" src="scripts/script.js"></script>-->
 	
 	
 
