--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -69,25 +69,25 @@
 	<div id="wowslider-container1">
 	<div class="ws_images">
 		<ul>
-	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 800px; height: 370px" /></li>
-        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:800px; height:370px;" /></li>
-        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:800px; height:370px;" /></li>
+	    <li><img alt="boliche" src="img/1.png" style="width: 800px; height: 370px" /></li>
+        <li><img alt="boliche" src ="img/2.png" style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche"  src="img/3.png" style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche" src="img/4.png"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche" src="img/5.png"  style="width:800px; height:370px;" /></li>
+        <li><img  alt="boliche" src="img/6.png"  style="width:800px; height:370px;" /></li>
+        <li><img alt="boliche" src="img/7.png"  style="width:800px; height:370px;" /></li>
         </ul>
 	</div>
 	
     <div class="ws_bullets">
     
-       <a href="#" title="img01"><img src="miniaturas/DSCF6153.JPG" alt="img01"/></a>
-        <a href="#" title="img02"><img src="miniaturas/DSCF6171.JPG" alt="img02"/></a>
-        <a href="#" title="img03"><img src="miniaturas/DSCF6174.JPG" alt="img04"/></a>
-        <a href="#" title="img04"><img src="miniaturas/dscf6176.jpg" alt="img05"/></a>
-         <a href="#" title="img05"><img src="miniaturas/dscf6178.jpg" alt="img06"/></a>
-          <a href="#" title="img06"><img src="miniaturas/dscf6179.jpg" alt="img07"/></a>
-           <a href="#" title="img07"><img src="miniaturas/dscf6180.jpg" alt="img08"/></a>
+       <a href="#" title="img01"><img src="img/1.png" alt="img01"/></a>
+        <a href="#" title="img02"><img src="img/2.png" alt="img02"/></a>
+        <a href="#" title="img03"><img src="img/3.png" alt="img04"/></a>
+        <a href="#" title="img04"><img src="img/4.png" alt="img05"/></a>
+         <a href="#" title="img05"><img src="img/5.png" alt="img06"/></a>
+          <a href="#" title="img06"><img src="img/6.png" alt="img07"/></a>
+           <a href="#" title="img07"><img src="img/7" alt="img08"/></a>
 	</div>
     </div>
 	<script type="text/javascript" src="scripts/wowslider.js"></script>
