--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,6 +61,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
+<div class="contenedor">
 <form id="form1" runat="server">
     <div>
    
@@ -96,7 +97,7 @@
 	
 
 </form>
-
+</div>
 
 
 
