--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -60,7 +60,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
-<div class="contenedor">
+<div class="contenedor-slaider">
 <form id="form1" runat="server">
     <div>
    
