--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,14 +61,14 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
-<div class="contenedor">
+<div class="contenedor-slaider">
 <form id="form1" runat="server">
     <div>
    
     </div>
 
 	<div id="wowslider-container1">
-	<div class="ws_images contenedor-slaider">
+	<div class="ws_images ">
 		<ul>
 	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 800px; height: 370px" /></li>
         <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:800px; height:370px;" /></li>
@@ -80,7 +80,7 @@
         </ul>
 	</div>
 	
-    <div class="ws_bullets contenedor-slaider">
+    <div class="ws_bullets">
     
        <a href="#" title="img01"><img src="miniaturas/DSCF6153.JPG" alt="img01"/></a>
         <a href="#" title="img02"><img src="miniaturas/DSCF6171.JPG" alt="img02"/></a>
