--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,7 +61,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
-<div class="contenedor-slaider">
+<div>
 <form id="form1" runat="server">
     <div>
    
@@ -70,13 +70,13 @@
 	<div id="wowslider-container1">
 	<div class="ws_images ">
 		<ul>
-	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 800px; height: 370px" /></li>
-        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:800px; height:370px;" /></li>
-        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:800px; height:370px;" /></li>
-        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:800px; height:370px;" /></li>
+	    <li><img alt="boliche" src="miniaturas/DSCF6153.JPG" style="width: 1200px; height: 370px" /></li>
+        <li><img alt="boliche" src ="miniaturas/DSCF6171.JPG" style="width:1200px; height:370px;" /></li>
+        <li><img alt="boliche"  src="miniaturas/DSCF6174.JPG" style="width:1200px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6176.jpg"  style="width:1200px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6178.jpg"  style="width:1200px; height:370px;" /></li>
+        <li><img  alt="boliche"src="miniaturas/dscf6179.jpg"  style="width:1200px; height:370px;" /></li>
+        <li><img alt="boliche" src="miniaturas/dscf6180.jpg"  style="width:1200px; height:370px;" /></li>
         </ul>
 	</div>
 	
