--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,6 +61,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
+<main class="contenedor">
 <div>
 <form id="form1" runat="server">
     <div>
@@ -98,7 +99,7 @@
 
 </form>
 </div>
-
+</main>
 
 
 <!--Aqui termina el Wodslaider-->
