--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -60,6 +60,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
+<main class="contenedor">
 <div >
 <form id="form1" runat="server">
     <div>
@@ -97,7 +98,7 @@
 
 </form>
 </div>
-
+</main>
 
 
 <!--Aqui termina el Wodslaider-->
