--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,8 +61,8 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
-<main class="contenedor">
-<div>
+
+<div class="contenedor">
 <form id="form1" runat="server">
     <div>
    
@@ -99,7 +99,6 @@
 
 </form>
 </div>
-</main>
 
 
 <!--Aqui termina el Wodslaider-->
