--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -61,7 +61,7 @@
 
 <!--Aqui inicia el Woddslaider-->
 
-<div class="contenedor" >
+<div class="contenedor slaider" >
 <form id="form1" runat="server">
     <div>
    
