--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -61,12 +61,10 @@
 
 <!--Aqui inicia el Woddslaider-->
 
-<div class="contenedor slaider" >
-<form id="form1" runat="server">
-    <div>
-   
-    </div>
 
+<form id="form1" runat="server">
+    
+  <div class="contenedor" >
 	<div id="wowslider-container1">
 	<div class="ws_images">
 		<ul>
@@ -95,9 +93,9 @@
 <!--	<script type="text/javascript" src="scripts/script.js"></script>-->
 	
 	
-
+  </div>
 </form>
-</div>
+
 
 
 
