--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -86,7 +86,7 @@
         <a href="#" title="img04"><img src="img/4.png" alt="img05"/></a>
          <a href="#" title="img05"><img src="img/5.png" alt="img06"/></a>
           <a href="#" title="img06"><img src="img/6.png" alt="img07"/></a>
-           <a href="#" title="img07"><img src="img/7" alt="img08"/></a>
+           <a href="#" title="img07"><img src="img/7.png" alt="img08"/></a>
 	</div>
     </div>
 	<script type="text/javascript" src="scripts/wowslider.js"></script>
