--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -62,6 +62,7 @@
 <!--Aqui inicia el Woddslaider-->
 
 <div class="contenedor" >
+  <section>
 <form id="form1" runat="server">
     
   
@@ -95,6 +96,7 @@
 	
   
 </form>
+  </section>
 </div>
 
 
