--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -62,7 +62,7 @@
 
 <!--Aqui inicia el Woddslaider-->
 <div class="contenedor">
-<div class="barra">
+<div class="barra-slaider">
   <form id="form1" runat="server">
       
     
