--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -61,7 +61,7 @@
 </section>
 
 <!--Aqui inicia el Woddslaider-->
-
+<div class="contenedor">
 <form id="form1" runat="server">
   <div id="wowslider-container1">
   <div class="ws_images">
@@ -90,7 +90,7 @@
   <script type="text/javascript" src="scripts/wowslider.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
 </form>
-
+</div>
 
 
 
