--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -64,7 +64,7 @@
 
   
 
-  
+  <div class="contenedor">
       <form id="form1" runat="server">
         <div id="wowslider-container1">
         <div class="ws_images">
@@ -93,7 +93,7 @@
         <script type="text/javascript" src="scripts/wowslider.js"></script>
       <script type="text/javascript" src="scripts/script.js"></script>
       </form>
-  
+  </div>
   
  
  
