--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -91,7 +91,7 @@
 	</div>
     </div>
 	<script type="text/javascript" src="scripts/wowslider.js"></script>
-<!--	<script type="text/javascript" src="scripts/script.js"></script>-->
+<script type="text/javascript" src="scripts/script.js"></script>
 	
 	
   
