--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" media="all" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Menur de Navegacion responsive</title>
   <link rel="stylesheet" href="style.css">
@@ -13,6 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto:wght@100&display=swap" rel="stylesheet"> 
   <title>Navegacion responsiva</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
