--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
           </video>
       </article>
       <div class="entrada__contenido">
-        <h2>Conoce nuestros eventos para todas las edades</h2>
+        <h2>¡No bajemos la guardia!</h2>
         <p class="blog__linea">____</p>
-        <p>En Ilusion bowl nos especializamos en la diversión de todas las personas que nos visitan, 
-          por tal motivo tenemos eventos para todas las edades. </p>
+        <p>En Ilusión Bowl ¡No bajamos la guardia! Conoce nuestras medidas
+           sanitarias para que tú y tu familia pasen una experiencia perfecta,
+           segura y sobre todo llena de diversión ¡Te estamos esperando! </p>
          </div>
      </section>
    
