--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
         
             <h2>Torneos y ligas</h2>
             <p class="blog__linea">____</p>
-            <p>En Ilusion bowl nos especializamos en la diversión de todas las personas que nos visitan, 
-              por tal motivo tenemos eventos para todas las edades. </p>
+            <p>El boliche aparte de ser un deporte que reune a familias o empresas
+               para tener una sana convivencia,
+               es una disciplina que se práctica de forma ordenada y profesional. </p>
              
               <a class="boton__promociones" href="index.html">Ir a Torneos</a>
 
