--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         por tal motivo tenemos eventos para todas las edades. </p>
        </div>
           <div class="entrada__imagen">
-             <img loading="lazy" class="imagen" src="img/BOLADEBOLICHE.png" alt="imagen blog">
+             <img loading="lazy" class="imagen" src="img/LOGO-ACADEMIA-DE-BOLICHE-1-1-1024x1024.png" alt="imagen blog">
           </div>
 
           <div class="entrada__contenido">
