--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -46,7 +46,7 @@
 
     </li>
     <li class="hover"><a href="#">Academia de Boliche</a></li>
-    <li class="hover"><a href="#">Torneos y Ligas</a></li>
+    <li class="hover"><a href="torneos.html">Torneos y Ligas</a></li>
     <li class="hover"><a href="#">Informes de Torneos</a></li>
     <li class="hover"><a href="#">Contacto</a></li>
   </ul>
