--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section class="barra-video">
       <article class="barra-video--primera">
         <video class="video" controls="controls" preload="auto"  >
-          <source src="Video/BILLAR.mp4" type="video/mp4">
+          <source src="Video/Protocolo de seguridad sanitaria IlusionBowl.mp4" type="video/mp4">
           </video>
       </article>
       <div class="entrada__contenido">
