--- a/torneos.html
+++ b/torneos.html
@@ -60,7 +60,7 @@
 <!--AQUI TERMINA EL HEDER E INICA EL MAIN-->
 
 <div class="contenedor ">
-    <main class="blog contenido-principal-torneos">
+    <main class="blog-torneos contenido-principal-torneos">
      
         <article class="entrada-principal-torneos">
             <div class="entrada__heading">
