--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li class="hover"> <a href="#">Eventos <i class="icon-abajo2"></i></a>
       <ul class="submenu">
                     <li class="hover__submenu"><a class="hover__enlace" href="#">Academia de Boliche</a></li>
-                    <li class="hover__submenu"><a class="hover__enlace"  href="torneos.html">Torneos y Ligas</a></li>
+                    <li class="hover__submenu"><a class="hover__enlace"  href="#">Torneos y Ligas</a></li>
                     <li class="hover__submenu"><a class="hover__enlace"  href="#">Informes de Torneos</a></li>
                     <li class="hover__submenu"><a class="hover__enlace"   href="#">Contacto</a></li>
               
@@ -42,7 +42,7 @@
 
     </li>
     <li class="hover"><a href="#">Academia de Boliche</a></li>
-    <li class="hover"><a href="#">Torneos y Ligas</a></li>
+    <li class="hover"><a href="torneos.html">Torneos y Ligas</a></li>
     <li class="hover"><a href="#">Informes de Torneos</a></li>
     <li class="hover"><a href="#">Contacto</a></li>
   </ul>
