--- a/galeriaValleReal.html
+++ b/galeriaValleReal.html
@@ -119,7 +119,7 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.506023764192!2d-103.42237758507537!3d20.648982206010313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ac2496eb6b0b%3A0xd1e6629f82901d56!2sIlusion%20Bowl!5e0!3m2!1ses-419!2smx!4v1638904220883!5m2!1ses-419!2smx" width="300" 
     height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
-  <section >
+  <section class="mapa">
   <p class="mapa__parrafo">Ciudadela Urban Village
    Av. Moctezuma, Mirador del
    sol, 45054 Zapopan Jal
@@ -130,7 +130,7 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.409003496825!2d-103.43359278507431!3d20.734210203144194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428afbf35a987d1%3A0x3089061b4f8fd34!2sIlusion%20Bowl%20Zona%20Real!5e0!3m2!1ses-419!2smx!4v1638904386906!5m2!1ses-419!2smx" width="300"
      height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </section>
-  <section>
+  <section class="mapa">
   <p class="mapa__parrafo">Avenida del Servidor
     Público, Zapopan, Jal. 45136
     Zapopan, Jal. México
