--- a/torneos.html
+++ b/torneos.html
@@ -54,7 +54,7 @@
  
 </nav>
 <section class="barra-sucursal contenedor ">
-  <h2  class="barra-covid no-margin">Sucursales</h2>
+  <h2  class="barra-covid no-margin">ligas y torneos</h2>
 </section>
 
 <!--AQUI TERMINA EL HEDER E INICA EL MAIN-->
@@ -232,5 +232,11 @@
   </table>
 </article>
 </div>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script>
+$(".hide").on('click', function(){
+  $("nav ul").toggle('slow');
+})
+</script>
 </html>
 </body>
