--- a/torneos.html
+++ b/torneos.html
@@ -54,7 +54,7 @@
  
 </nav>
 <section class="barra-sucursal contenedor ">
-  <h2  class="barra-covid no-margin">ligas y torneos</h2>
+  <h2  class="barra-covid no-margin">Torneos</h2>
 </section>
 
 <!--AQUI TERMINA EL HEDER E INICA EL MAIN-->
