--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -33,8 +33,8 @@
 
 <nav class="navegacion" >
   <ul class="menu" >
-    <li class="hover"><a href="#">Inicio</a></li>
-    <li class="hover"><a href="#">Nosotros</a></li>
+    <li class="hover"><a href="index.html">Inicio</a></li>
+    <li class="hover"><a href="nosotros.html">Nosotros</a></li>
     <li class="hover"><a href="#">Menú</a></li>
     <li class="hover"> <a href="#">Eventos <i class="icon-abajo2"></i></a>
       <ul class="submenu">
