--- a/galeriaIlusionBowl.html
+++ b/galeriaIlusionBowl.html
@@ -35,7 +35,7 @@
   <ul class="menu" >
     <li class="hover"><a href="index.html">Inicio</a></li>
     <li class="hover"><a href="nosotros.html">Nosotros</a></li>
-    <li class="hover"><a href="#">Menú</a></li>
+    <li class="hover"><a href="menu.html">Menú</a></li>
     <li class="hover"> <a href="#">Eventos <i class="icon-abajo2"></i></a>
       <ul class="submenu">
                     <li class="hover__submenu"><a class="hover__enlace" href="#">Academia de Boliche</a></li>
