--- a/academia.html
+++ b/academia.html
@@ -137,6 +137,7 @@
               <div class="alinear-derecha flex">
                 <input class="boton w-sm-100" type="submit" value="Enviar">
                </div>
+              </div>
             </fieldset>
            
           </form>
