--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    
+</head>
+
+<body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +28,6 @@
   <title>Navegacion responsiva</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   
-   
 </head>
 <body>
 
@@ -57,66 +67,13 @@
  
 </nav>
 <section class="barra-sucursal contenedor ">
-  <h2  class="barra-covid no-margin">Ciudadela</h2>
+  <h2  class="barra-covid no-margin">Valle Real</h2>
 </section>
+  <!--Aqui empieza el backgraon de contacto-->
+<section class="contenedor-contacto">
 
-<!--Aqui inicia el Woddslaider-->
-
-
-<div class="contenedor contenido-principal">
-  <main class="blog">
-    <div class="container-all">
-      <input type="radio" id="1" name="image-slide" hidden>
-      <input type="radio" id="2" name="image-slide" hidden>
-      <input type="radio" id="3" name="image-slide" hidden>
-      <input type="radio" id="4" name="image-slide" hidden>
-      <input type="radio" id="5" name="image-slide" hidden>
-
-<div class="slide">
-  <div class="item-slide">
-      <img src="miniaturas/DSCF6178.JPG" alt="">
-  </div>
-  <div class="item-slide">
-      <img src="miniaturas/DSCF6153.JPG" alt="">
-  </div>
-  <div class="item-slide">
-      <img src="miniaturas/DSCF6171.JPG" alt="">
-  </div>
-  <div class="item-slide">
-      <img src="miniaturas/DSCF6173.JPG" alt="">
-  </div>
-  <div class="item-slide">
-      <img src="miniaturas/dscf6176.jpg" alt="">
-  </div>
-</div>
-<div class="pagination">
-  <label class="pagination-item" for="1">
-      <img src="img/DSCF6178.JPG" alt="">
-  </label>
-  <label class="pagination-item" for="2">
-      <img src="miniaturas/DSCF6153.JPG" alt="">
-  </label>
-  <label class="pagination-item" for="3">
-      <img src="miniaturas/DSCF6171.JPG" alt="">
-  </label>
-  <label class="pagination-item" for="4">
-      <img src="miniaturas/DSCF6173.JPG" alt="">
-  </label>
-  <label class="pagination-item" for="5">
-      <img src="miniaturas/dscf6176.jpg" alt="">
-  </label>
-</div>
-  </div>
-
-
-     
-  </main>
-</div>
-  
-
-
-<!--Aqui termina el Wodslaider-->
-
+</section>
+<!--Aqui termina el backgraon de contacto-->
 <div class="mapas contenedor">
   <section class="mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3733.506023764192!2d-103.42237758507537!3d20.648982206010313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428ac2496eb6b0b%3A0xd1e6629f82901d56!2sIlusion%20Bowl!5e0!3m2!1ses-419!2smx!4v1638904220883!5m2!1ses-419!2smx" width="300" 
@@ -153,4 +110,6 @@ $(".hide").on('click', function(){
 
 </body>
 
+</html>
+</body>
 </html>
