--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
     <li class="hover"><a href="academia.html">Academia de Boliche</a></li>
     <li class="hover"><a href="torneos.html">Torneos y Ligas</a></li>
     <li class="hover"><a href="#">Informes de Torneos</a></li>
-    <li class="hover"><a href="#">Contacto</a></li>
+    <li class="hover"><a href="contacto.html">Contacto</a></li>
   </ul>
   <div class="hide">
     <i class="fa fa-bars" aria-hidden="true"></i>
